tests/expectations/compiler/function/shadow_parameter_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:5:16
     |
   5 |         let hi = 2u8;
     |                ^"""]
